fix(magda) z-index update

--- a/src/assets/style/components/_forms.scss
+++ b/src/assets/style/components/_forms.scss
@@ -188,14 +188,11 @@ form.cms {
       text-align: center;
     }
     &:nth-child(2) {
+      z-index: 10;
+    }
+    &:nth-child(3) {
       z-index: 9;
-    }
-    &:nth-child(8){
-      z-index: 8;
-    }
-    &:last-child {
-      margin-bottom: 200px;
-    }
+    }    
   }
   .form-info {
     margin: 25px auto 0 auto;
